# test-from-auto-deploy

./: README.md  main.py  pyproject.toml  requirements.txt
internal/adapters/app/: app.py  test_app_adapter.py
internal/adapters/domain/: arithmetic.py  test_arithmetic_domain.py
internal/adapters/framework/left/http/: http_api.py
internal/adapters/framework/right/db/: db.py  models.py  test_database_adapter.py
internal/ports/: app.py  arithmentic.py  framework_left.py  framework_right.py
