[tool.poetry]
name = "test-from-deploy-fast-api"
version = "0.1.0"
description = ""
authors = ["Carlos Eduardo <suportebeloj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.8"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
pytest = "^7.1.3"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
